# krl-model-zoo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG_PUBLIC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRUPTION_FIX_SUMMARY.md  DEVELOPMENT_ROADMAP.md  Dockerfile  GATE1_COMPLETION_REPORT.md  GATE2_PROGRESS_REPORT.md  GITHUB_PUBLICATION_AUDIT.md  MANIFEST.in  ML_MODELS_UPDATE_COMPLETE.md  MULTI_TASK_COMPLETION_REPORT.md  NOTICE  OPEN_VS_PROPRIETARY_STRATEGY.md  PHASE_2.5_COMPLETION_NOTES.md  PUBLICATION_READY_FINAL.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_REPO_STRUCTURE_PLAN.md  README.md  SECURITY_IMPLEMENTATION_AUDIT.md  add_spdx_headers.py  arch_and_model_drafting  final_fix.py  fix_corruption.py  fix_emoji_damage.py  krl_model_full_develop_notes  model_runs.db  pyproject.toml
.github/: FUNDING.yml  GITHUB_ABOUT.md  OPTIMIZATION_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  QUICK_SETUP.md  REPOSITORY_SETTINGS.md  SOCIAL_PREVIEW.md  TOPICS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: build-and-sign.yml  docs.yml  lint.yml  publish.yml  security-checks.yml  test.yml  tests.yml
benchmarks/: PERFORMANCE_REPORT.md  benchmark_results.json  econometric_benchmarks.py  performance_benchmarks.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ASYMMETRIC_MODELS_COMPLETE.md  BENCHMARK_ANALYSIS.md  COINTEGRATION_USER_GUIDE.md  COMPREHENSIVE_TESTING_COMPLETE.md  GARCH_IMPLEMENTATION_COMPLETE.md  INTEGRATION_TEST_RESULTS.md  KALMAN_FILTER_COMPLETE.md  LOCAL_LEVEL_COMPLETE.md  MATHEMATICAL_FORMULATIONS.md  ML_TESTS_SCHEMA_UPDATE_COMPLETE.md  ML_UNIT_TESTS_COMPLETE.md  PHASE_2_1_COMPLETE.md  PHASE_2_1_FINAL_SUMMARY.md  PHASE_2_2_PLAN.md  PROPHET_IMPLEMENTATION_COMPLETE.md  USER_GUIDE.md  VAR_IMPLEMENTATION_COMPLETE.md  VAR_USER_GUIDE.md  changelog.rst  citations.rst  conf.py  contributing.rst  development.rst  examples.rst  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt  testing.rst
docs/api/: anomaly.rst  core.rst  econometric.rst  index.rst  ml.rst  regional.rst  state_space.rst  volatility.rst
docs/api_reference/: COINTEGRATION_API.md  VAR_API.md
docs/mathematical_formulations/: ECONOMETRIC_MATH.md
docs/user_guide/: anomaly.rst  econometric.rst  index.rst  machine_learning.rst  regional.rst  state_space.rst  volatility.rst
examples/: arima_forecasting.py  example_01_garch_volatility_forecasting.py  example_02_egarch_leverage_analysis.py  example_03_gjr_garch_threshold_detection.py  example_04_kalman_filter_tracking.py  example_arima_run.py  example_cointegration_run.py  example_prophet_run.py  example_sarima_run.py  example_var_run.py  regional_analysis.py  sarima_seasonal_forecasting.py
examples/data/: README.md  employment_sample.csv  financial_returns.csv  financial_returns_sample.csv  gdp_sample.csv  generate_datasets.py  generate_sample_data.py  regional_industry.csv  regional_industry_sample.csv  revenue_anomaly_sample.csv
examples/notebooks/: 01_economic_forecasting.ipynb  02_business_forecasting_prophet.ipynb  03_volatility_modeling.ipynb  03_volatility_modeling_garch.ipynb  04_regional_analysis.ipynb  05_anomaly_detection.ipynb
krl_core/: __init__.py  base_model.py  model_input_schema.py  model_registry.py  plotly_adapter.py  results.py  utils.py
krl_models/: __init__.py
krl_models/anomaly/: __init__.py  isolation_forest.py  stl_decomposition.py
krl_models/econometric/: __init__.py  cointegration_model.py  prophet_model.py  sarima_model.py  var_model.py
krl_models/ml/: __init__.py  random_forest.py  regularized_regression.py  xgboost_model.py
krl_models/regional/: __init__.py  location_quotient.py  shift_share.py
krl_models/state_space/: __init__.py  kalman_filter.py  kalman_filter.py.backup  local_level.py
tests/: __init__.py  conftest.py
(+46 files in other folders)
