[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krl-model-zoo"
version = "1.0.0"
description = "Production-ready socioeconomic and econometric models for policy analysis, forecasting, and regional development"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "KR-Labs Team", email = "info@krlabs.dev"}
]
maintainers = [
    {name = "KR-Labs Team", email = "info@krlabs.dev"}
]
keywords = [
    "econometrics",
    "time-series",
    "forecasting",
    "causal-inference",
    "machine-learning",
    "regional-analysis",
    "anomaly-detection",
    "policy-analysis",
    "socioeconomic",
    "data-science",
    "statistics",
    "python"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0,<3.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "prophet>=1.1.0",
    "plotly>=5.14.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0"
]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.0.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.0",
    "ipython>=8.0.0"
]
all = ["krl-model-zoo[dev,test,docs]"]

[project.urls]
Homepage = "https://github.com/KR-Labs/krl-model-zoo"
Documentation = "https://krl-model-zoo.readthedocs.io"
Repository = "https://github.com/KR-Labs/krl-model-zoo"
"Bug Tracker" = "https://github.com/KR-Labs/krl-model-zoo/issues"
Changelog = "https://github.com/KR-Labs/krl-model-zoo/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["krl_models*", "krl_core*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
krl_models = ["py.typed"]
krl_core = ["py.typed"]
